--- a/FrontEnd/assets/style2.css
+++ b/FrontEnd/assets/style2.css
@@ -186,97 +186,9 @@ nav li {
 li:hover {
   color: #b1663c;
 }
-#introduction {
-  display: flex;
-  align-items: center;
-}
-#introduction figure {
-  flex: 1;
-}
-#introduction img {
-  display: block;
-  margin: auto;
-  width: 80%;
-}
-
-#introduction article {
-  flex: 1;
-}
-#introduction h2 {
-  margin-bottom: 1em;
-}
-
-#introduction p {
-  margin-bottom: 0.5em;
-}
-#portfolio h2 {
-  text-align: center;
-  margin-bottom: 1em;
-}
-.gallery {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-}
-
-.gallery img {
-  width: 100%;
-}
-
-.boutton_categorie {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 51px;
-}
-.categorieNone,
-.categorieObjets,
-.categorieAppartements,
-.catergorieHotelsAndRestaurants {
-  height: 37px;
-  border-radius: 60px;
-  border: 1px solid #1d6154;
-  background-color: white;
-  color: #1d6154;
-  font-family: "Syne";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  padding-top: 9px;
-  padding-bottom: 9px;
-}
-
-.categorieNone {
-  padding-left: 28px;
-  padding-right: 30px;
-}
-
-.categorieObjets {
-  padding-left: 20px;
-  padding-right: 22px;
-}
-
-.categorieAppartements {
-  padding-left: 14px;
-  padding-right: 15px;
-}
-.catergorieHotelsAndRestaurants {
-  padding-left: 9px;
-  padding-right: 11px;
-}
-.categorieNone:hover,
-.categorieObjets:hover,
-.categorieAppartements:hover,
-.catergorieHotelsAndRestaurants:hover {
-  color: white;
-  background-color: #1d6154;
-}
 
 #contact {
-  width: 50%;
+  width: 40%;
   margin: auto;
 }
 #contact > * {
@@ -304,6 +216,10 @@ li:hover {
 #contact textarea {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#contact p {
+  text-align: center;
+  text-decoration: underline;
 }
 
 input[type="submit"] {
