--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -138,11 +138,63 @@ table {
 }
 /** end reset css**/
 body {
-  max-width: 1140px;
-  margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
+  max-width: 1140px;
+  margin: auto; /** enlever width et margin pour l'edit**/
 }
+
+/**.main-container {
+  max-width: 1140px;
+  margin: auto;
+}
+
+.edit {
+  background-color: #000;
+  width: 100%;
+  height: 59px;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boutton {
+  display: flex;
+  gap: 30px;
+}
+
+.boutton-noir {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #e5e5e5;
+  font-size: 14px;
+  background-color: black;
+  margin: 20px auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 39px;
+  text-align: center;
+  border: none;
+  border-radius: 60px;
+  cursor: pointer;
+}
+
+.boutton-blanc {
+  color: black;
+  font-size: 14px;
+  background-color: #e5e5e5;
+  margin: 20px auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 39px;
+  text-align: center;
+  border: none;
+  border-radius: 60px;
+  cursor: pointer;
+}**/
+
 header {
   display: flex;
   justify-content: space-between;
@@ -213,6 +265,19 @@ li:hover {
   text-align: center;
   margin-bottom: 1em;
 }
+/**
+.modification {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-left: -75px;
+}
+.modification a {
+  padding-top: 10px;
+  display: flex;
+  gap: 10px;
+}**/
+
 .gallery {
   width: 100%;
   display: grid;
