mise en place des classes  pour la connexion modal

--- a/FrontEnd/assets/style2.css
+++ b/FrontEnd/assets/style2.css
@@ -148,6 +148,9 @@ header {
   justify-content: space-between;
   margin: 50px 0;
 }
+.connect-login {
+  font-weight: bold;
+}
 section {
   margin: 50px 0;
 }
