--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -147,7 +147,7 @@ body {
 /**.main-container {
   max-width: 1140px;
   margin: auto;
-}
+}**/
 
 .edit {
   background-color: #000;
@@ -159,12 +159,12 @@ body {
   align-items: center;
 }
 
-.boutton {
+.button {
   display: flex;
   gap: 30px;
 }
 
-.boutton-noir {
+.blackButton {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -181,7 +181,7 @@ body {
   cursor: pointer;
 }
 
-.boutton-blanc {
+.whiteButton {
   color: black;
   font-size: 14px;
   background-color: #e5e5e5;
@@ -193,7 +193,7 @@ body {
   border: none;
   border-radius: 60px;
   cursor: pointer;
-}**/
+}
 
 header {
   display: flex;
