partie haut noir en cours

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -144,10 +144,10 @@ body {
   margin: auto; /** enlever width et margin pour l'edit**/
 }
 
-/**.main-container {
+.mainContainer {
   max-width: 1140px;
   margin: auto;
-}**/
+}
 
 .edit {
   background-color: #000;
