--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -141,7 +141,7 @@ body {
   font-family: "Work Sans";
   font-size: 14px;
   max-width: 1140px;
-  margin: auto; /** enlever width et margin pour l'edit**/
+  margin: auto;
 }
 
 .mainContainer {
@@ -265,18 +265,17 @@ li:hover {
   text-align: center;
   margin-bottom: 1em;
 }
-/**
+
 .modification {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-left: -75px;
 }
 .modification a {
   padding-top: 10px;
   display: flex;
   gap: 10px;
-}**/
+}
 
 .gallery {
   width: 100%;
