--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -278,6 +278,27 @@ li:hover {
   cursor: pointer;
 }
 
+.modal {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.09);
+}
+
+.modal-wrapper {
+  overflow: auto;
+  width: 600px;
+  max-width: calc(100vw- 20px);
+  max-height: calc(100vh- 20px);
+  padding: 20px;
+  background-color: #fff;
+}
+
 .gallery {
   width: 100%;
   display: grid;
