--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -144,17 +144,15 @@ body {
   margin: auto;
 }
 
-.mainContainer {
-  max-width: 1140px;
-  margin: auto;
-}
-
 .edit {
+  position: absolute;
+  top: 0;
+  left: 0;
   background-color: #000;
   width: 100%;
   height: 59px;
   margin: 0px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
