--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -289,12 +289,69 @@ li:hover {
 }
 
 .modal-wrapper {
+  position: relative;
   overflow: auto;
   width: 600px;
   max-width: calc(100vw- 20px);
   max-height: calc(100vh- 20px);
   padding: 20px;
-  background-color: #fff;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+.js-modal-close {
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  right: 25px;
+}
+
+.modalMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-modal {
+  font-family: Work Sans;
+  font-weight: 400;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.miniGallery {
+}
+
+.hr {
+  border: none;
+  color: #b3b3b3;
+  width: 420px;
+  height: 0px;
+  border: 1px solid #b3b3b3;
+  margin-bottom: 30px;
+}
+
+.buttonModal {
+  height: 50px;
+  font-size: 1.2em;
+  border: transparent;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1d6154;
+  width: 42%;
+  text-align: center;
+  border-radius: 60px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.text-modal {
+  color: crimson;
+  margin-bottom: 30px;
 }
 
 .gallery {
