--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -269,11 +269,18 @@ li:hover {
   justify-content: center;
   gap: 20px;
 }
-.modification a {
+.jsModal {
   padding-top: 10px;
   display: flex;
   gap: 10px;
   cursor: pointer;
+}
+
+.modifText {
+  display: flex;
+  gap: 10px;
+  padding-top: 15px;
+  margin-left: 58px;
 }
 
 .modal {
@@ -330,13 +337,37 @@ li:hover {
   justify-content: center;
   grid-template-columns: 0.15fr 0.15fr 0.15fr 0.15fr 0.15fr;
   grid-template-rows: 0.25fr 0.25fr 0.25fr;
+  grid-column-gap: 8px;
   grid-row-gap: 18px;
   padding-bottom: 30px;
 }
 
 .miniGallery img {
-  width: 90%;
-  height: 90%;
+  width: 100%;
+}
+
+.miniGallery figure {
+  position: relative;
+  display: inline-block;
+}
+
+.icon-box {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: #000000;
+  color: #ffffff;
+  width: 17px;
+  height: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.modalTrash {
+  font-size: 10px;
 }
 
 .miniGallery figcaption {
