--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -313,6 +313,7 @@ li:hover {
   font-weight: bold;
   right: 30px;
   top: 30px;
+  cursor: pointer;
 }
 
 .modalMain {
@@ -401,7 +402,7 @@ li:hover {
 
 .text-modal {
   color: crimson;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .gallery {
