--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -449,11 +449,9 @@ li:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 30px;
 }
 .input-file {
-}
-
-.buttonInput {
   height: 50px;
   font-size: 1.2em;
   border: transparent;
@@ -467,12 +465,24 @@ li:hover {
   border-radius: 60px;
   cursor: pointer;
 }
+input[type="file"] {
+  display: none;
+}
+
+.input-title {
+  height: 51px;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  margin-bottom: 25px;
+}
+
+.title-label {
+  margin-bottom: 5px;
+}
 
 .formPhoto {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 .hrPhoto {
   border: none;
