--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -472,20 +472,28 @@ li:hover {
   margin-bottom: 15px;
 }
 
-.input-file {
+.file-label {
   height: 36px;
-  font-size: 1.2em;
+  font-size: 14px;
   border: transparent;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
   font-family: "Syne";
   font-weight: 700;
-  color: white;
+  color: #306685;
   background-color: #cbd6dc;
   width: 42%;
-  text-align: center;
+
   border-radius: 60px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 10px;
+}
+
+.input-file {
+  opacity: 0;
+  height: 5px;
 }
 
 .type-photo {
