--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -546,7 +546,10 @@ li:hover {
   text-align: center;
   border-radius: 60px;
   cursor: pointer;
-  margin-bottom: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0px 27px 80px;
 }
 /*#buttonPhoto:disabled {
   color: white;
