--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -329,7 +329,7 @@ li:hover {
   font-weight: 200;
   font-size: 26px;
   color: #000;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   padding-top: 30px;
 }
 
@@ -452,7 +452,7 @@ li:hover {
   font-weight: 400;
   font-size: 26px;
   color: #000;
-  padding-bottom: 20px;
+  padding-bottom: 14px;
   padding-top: 30px;
 }
 
@@ -523,7 +523,7 @@ li:hover {
   height: 51px;
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 .title-label {
@@ -543,6 +543,12 @@ li:hover {
   margin-top: 10px;
 }
 
+#message {
+  display: flex;
+  justify-content: center;
+  margin-top: -5px;
+}
+
 #buttonPhoto {
   height: 36px;
   font-size: 1.2em;
@@ -559,7 +565,7 @@ li:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 0px 27px 80px;
+  margin: 20px 0px 15px 94px;
 }
 /*#buttonPhoto:disabled {
   color: white;
